# portfolio-2026

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  vercel.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/routers/: contact.py  projects.py
backend/app/schemas/: contact.py
backend/tests/: test_contact.py
frontend/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/projects/[slug]/: ProjectDetailClient.tsx  page.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/components/sections/: AboutSection.tsx  ContactSection.tsx  ExperienceSection.tsx  HeroSection.tsx  MetricsSection.tsx  ProjectsSection.tsx  ServicesSection.tsx  StackSection.tsx  TestimonialsSection.tsx
frontend/src/components/three/: ParticleGraph.tsx
frontend/src/components/ui/: AnimatedCounter.tsx  Badge.tsx  Button.tsx  CustomCursor.tsx  GlassCard.tsx  IntroLoader.tsx  ScrollProgress.tsx  SectionDivider.tsx
frontend/src/hooks/: useScrollAnimation.ts
frontend/src/lib/: api.ts  projects.ts  utils.ts
